finished basic swagger documentation
